# LMS

./: ANALYSIS.md  ANALYSIS_README.md  CODE_SNIPPETS.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_GUIDE.md  README.md  RUST_IMPLEMENTATION_GUIDE.md  TODO_SUMMARY.md  justfile  library.db  pubspec.yaml  workflow.txt
android/app/: build.gradle.kts
data/faces/: 11111.face
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_module.dart  app_widget.dart  main.dart
lib/src/core/: feedback_utils.dart  (+4 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: auth_api.rs  book_api.rs  borrowing_api.rs  camera_api.rs  face_api.rs  mod.rs  penalty_api.rs  report_api.rs
rust/src/application/: auth_service.rs  book_service.rs  borrowing_service.rs  camera_service.rs  face_service.rs  mod.rs  penalty_service.rs  report_service.rs
rust/src/domain/: book.rs  borrowing.rs  mod.rs  penalty.rs  report.rs  user.rs
rust/src/infrastructure/sqlite/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_librarymanagementsystem.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_librarymanagementsystem.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+44 files in other folders)
