[package]
name = "rust_lib_librarymanagementsystem"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
image = { version = "0.25.10", features = ["jpeg"] }
base64 = "0.22.1"
rayon = "1.12.0"
lazy_static = "1.5.0"
nokhwa = { version = "0.10.10", features = ["input-v4l"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
